--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,18 @@
 	--dark-x: #1e2126;
 	--light: #ffffff;
 }
+
+
+/*===== Margenes =====*/
+:root{
+  --mb-1: 0.5rem;
+  --mb-2: 1rem;
+  --mb-3: 1.5rem;
+  --mb-4: 2rem;
+  --mb-5: 2.5rem;
+  --mb-6: 3rem;
+}
+
 body{
 	/*background-color: var(--dark);*/
 }
