--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,8 @@ body{
 .bg-dark{
 	background-color: var(--dark) !important;
 }
+
+
+@media screen and (max-width: 767px) {
+.mobile-space {margin-top:10px;}
+}
